# num-rational

./: .travis.yml  Cargo.toml  README.md  RELEASES.md  build.rs
.github/workflows/: ci.yaml
benches/: bigrational.rs
ci/: rustup.sh  test_full.sh
ci/benchmarks/: Cargo.toml
src/: cmp.rs  convert.rs  from.rs  iter.rs  lib.rs  opassign.rs  ops.rs  pow.rs  str.rs  tests.rs
src/tests/: arith.rs
