[package]
authors = ["The Rust Project Developers"]
description = "Rational numbers implementation for Rust"
documentation = "https://docs.rs/num-rational"
homepage = "https://github.com/rust-num/num-rational"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "data-structures", "science", "no-std"]
license = "MIT/Apache-2.0"
name = "num-rational"
repository = "https://github.com/rust-num/num-rational"
version = "0.2.0-git"
publish = false
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]

[dependencies.num-bigint]
optional = true
version = "0.2.0"

[dependencies.num-integer]
version = "0.1.36"
default-features = false

[dependencies.num-traits]
version = "0.2.1"
default-features = false

[dependencies.serde]
optional = true
version = "1.0.0"
default-features = false

[features]
default = ["bigint", "std"]
bigint = ["num-bigint", "std"]
std = ["num-traits/std"]
