[package]
authors = ["The Rust Project Developers"]
description = "Rational numbers implementation for Rust"
documentation = "https://docs.rs/num-rational"
homepage = "https://github.com/rust-num/num-rational"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "data-structures", "science", "no-std"]
license = "MIT/Apache-2.0"
name = "num-rational"
repository = "https://github.com/rust-num/num-rational"
version = "0.2.2"
readme = "README.md"
build = "build.rs"
exclude = ["/ci/*", "/.travis.yml", "/bors.toml"]

[package.metadata.docs.rs]
features = ["std", "bigint-std", "serde"]

[dependencies]

[dependencies.num-bigint]
optional = true
version = "0.2.0"
default-features = false

[dependencies.num-integer]
version = "0.1.38"
default-features = false

[dependencies.num-traits]
version = "0.2.7"
default-features = false

[dependencies.serde]
optional = true
version = "1.0.0"
default-features = false

[features]
default = ["bigint-std", "std"]
i128 = ["num-integer/i128", "num-traits/i128"]
std = ["num-integer/std", "num-traits/std"]
bigint = ["num-bigint"]
bigint-std = ["bigint", "num-bigint/std"]

[build-dependencies]
autocfg = "0.1.3"
