[package]
authors = ["The Rust Project Developers"]
description = "Rational numbers implementation for Rust"
documentation = "https://docs.rs/num-rational"
homepage = "https://github.com/rust-num/num-rational"
keywords = ["mathematics", "numerics", "fractions"]
categories = ["algorithms", "data-structures", "science", "no-std"]
license = "MIT OR Apache-2.0"
name = "num-rational"
repository = "https://github.com/rust-num/num-rational"
version = "0.4.1"
readme = "README.md"
exclude = ["/bors.toml", "/ci/*", "/.github/*"]
edition = "2018"

[package.metadata.docs.rs]
features = ["std", "num-bigint-std", "serde"]

[dependencies]

[dependencies.num-bigint]
optional = true
version = "0.4.0"
default-features = false

[dependencies.num-integer]
version = "0.1.42"
default-features = false
features = ["i128"]

[dependencies.num-traits]
version = "0.2.11"
default-features = false
features = ["i128"]

[dependencies.serde]
optional = true
version = "1.0.0"
default-features = false

[features]
default = ["num-bigint-std", "std"]
std = ["num-integer/std", "num-traits/std"]
num-bigint-std = ["num-bigint/std"]

[build-dependencies]
autocfg = "1.0.0"
