[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.num-rational]
path = "../.."
default-features = false
features = ["num-bigint"]

[dependencies.num-bigint]
version = "0.4.0"
default-features = false

[dependencies.rand]
version = "0.8"
default-features = false
